guest route pages ready

--- a/frontend/src/pages/Steps/StepPhoneEmail/StepPhoneEmail.module.css
+++ b/frontend/src/pages/Steps/StepPhoneEmail/StepPhoneEmail.module.css
@@ -38,3 +38,10 @@
     color: #c4c5c5;
     width: 70%;
 }
+
+.bottomParagraph{
+    color: #c4c5c5;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 20px;
+}
