--- a/frontend/src/components/shared/Navigation/Navigation.module.css
+++ b/frontend/src/components/shared/Navigation/Navigation.module.css
@@ -4,3 +4,24 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.logoutButton{
+    background: none;
+    cursor: pointer;
+}
+
+.navRight{
+    display: flex;
+    align-items: center;
+
+}
+
+.avatar{
+    /* width: 40px;
+    height: 40px; */
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #0077ff;
+    margin:0 20px;
+    margin-right: 10px;
+}
